# MDLHELib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  reset_makefile.py
algebra/: CMakeLists.txt  CRT.cpp  CRT.hpp  EncMatrix.cpp  EncMatrix.hpp  EncVector.cpp  EncVector.hpp  Matrix.cpp  Matrix.hpp  NDSS.h  Vector.cpp  Vector.hpp
multiprecision/: CMakeLists.txt  MPContext.cpp  MPContext.hpp  MPEncArray.cpp  MPEncArray.hpp  MPEncMatrix.cpp  MPEncMatrix.hpp  MPEncVector.cpp  MPEncVector.hpp  MPPubKey.cpp  MPPubKey.hpp  MPRepeat.cpp  MPRepeat.h  MPReplicate.cpp  MPReplicate.h  MPRotate.cpp  MPRotate.h  MPSecKey.cpp  MPSecKey.hpp  MPSwap.cpp  MPSwap.h  Multiprecision.h
network/: CMakeLists.txt  network.cpp  network.hpp
paillier/: CMakeLists.txt  Paillier.cpp  Paillier.hpp
protocol/: CMakeLists.txt  Gt.cpp  Gt.hpp  LR.cpp  LR.hpp  Mode.cpp  Mode.hpp  PCA.cpp  PCA.hpp  Percentile.cpp  Percentile.hpp
test/: .gitignore  .test_network.cpp.swp  CMakeLists.txt  adult.data  adult_result  all_float_data_6  benchmark_FHE_primitives.cpp  benchmark_LR.cpp  benchmark_MMM.cpp  benchmark_PCA.cpp  benchmark_contingency.cpp  benchmark_covariance.cpp  benchmark_mat_mult.cpp  benchmark_mean_variance.cpp  benchmark_network.cpp  benchmark_paillier.cpp  benchmark_percentile.cpp  category.data  covariance.data  runPCA.cpp  test_CRT.cpp  test_GT.cpp  test_MPContext.cpp  test_MatrixVector.cpp  test_dumpFHESetting.cpp  test_encvector.cpp  test_fileutils.cpp  test_mode.cpp  test_network.cpp  test_paillier.cpp  test_swap.cpp
utils/: CMakeLists.txt  FHEUtils.cpp  FHEUtils.hpp  FileUtils.cpp  FileUtils.hpp  GreaterThanUtils.cpp  GreaterThanUtils.hpp  MatrixAlgebraUtils.hpp  encoding.cpp  encoding.hpp  timer.hpp
