include_directories(../)
include_directories(../HElib)

add_executable(test_EncryptVector test_encvector.cpp)
add_executable(test_Matrix test_MatrixVector.cpp)
add_executable(test_dump test_dumpFHESetting.cpp)
add_executable(test_fileutils test_fileutils.cpp)
add_executable(test_GT test_GT.cpp)
add_executable(test_CRT test_CRT.cpp)
add_executable(test_MPContext test_MPContext.cpp)
add_executable(test_mode test_mode.cpp)
add_executable(test_paillier test_paillier.cpp)
add_executable(test_network test_network.cpp)

add_executable(benchmark_FHE_primitives benchmark_FHE_primitives.cpp)
add_executable(benchmark_mean_variance benchmark_mean_variance.cpp)
add_executable(benchmark_PCA benchmark_PCA.cpp)
add_executable(benchmark_percentile benchmark_percentile.cpp)
add_executable(benchmark_LR benchmark_LR.cpp)
add_executable(benchmark_covariance benchmark_covariance.cpp)
add_executable(benchmark_paillier benchmark_paillier.cpp)
add_executable(benchmark_network benchmark_network.cpp)
add_executable(benchmark_MMM benchmark_MMM.cpp)

target_link_libraries(test_EncryptVector algebra utils fhe)
target_link_libraries(test_Matrix algebra utils)
target_link_libraries(test_dump utils fhe)
target_link_libraries(test_fileutils algebra utils fhe)
target_link_libraries(test_GT protocol paillier algebra utils fhe)
target_link_libraries(test_CRT algebra fhe)
target_link_libraries(test_MPContext protocol multiprecision algebra fhe)
target_link_libraries(test_mode protocol paillier algebra utils fhe)
target_link_libraries(test_paillier paillier algebra)
target_link_libraries(test_network net fhe algebra)

target_link_libraries(benchmark_PCA protocol multiprecision algebra utils fhe)
target_link_libraries(benchmark_FHE_primitives algebra utils fhe)
target_link_libraries(benchmark_mean_variance algebra utils fhe)
target_link_libraries(benchmark_percentile protocol paillier utils algebra fhe)
target_link_libraries(benchmark_LR protocol utils multiprecision algebra fhe)
target_link_libraries(benchmark_covariance protocol algebra utils fhe)
target_link_libraries(benchmark_paillier utils paillier algebra fhe)
target_link_libraries(benchmark_network utils net)
target_link_libraries(benchmark_MMM utils algebra multiprecision fhe)

file(COPY adult_result adult.data covariance.data all_float_data DESTINATION .)

